--- a/styles/Entrada.module.css
+++ b/styles/Entrada.module.css
@@ -1,3 +1,8 @@
+.entrada {
+    max-width: 80rem;
+    margin: 0 auto;
+}
+
 .contenido {
     padding: 2rem;
 }
@@ -40,4 +45,8 @@
 .enlace:hover {
     background-color: var(--primary);
     color: var(--blanco);
+}
+
+.texto {
+    white-space: pre-wrap;
 }
