--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -4,6 +4,7 @@
     background-size: cover;
     background-position: 50%;
     padding: 5rem 0;
+    position: relative;
 }
 
 .barra {
@@ -22,6 +23,8 @@
     margin-top: 5rem;
     display: flex;
     gap: 2rem;
+    position: relative;
+    z-index: 1;
 }
 @media (min-width: 768px) {
     .navegacion {
@@ -92,4 +95,16 @@
 .enlace:hover {
     background-color: var(--primary);
     color: var(--blanco);
+}
+
+.guitarra {
+    display: none;
+}
+@media (min-width: 768px) {
+    .guitarra {
+        display: block;
+        position: absolute;
+        right: 0;
+        bottom: -8px;
+    }
 }
