--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -106,5 +106,23 @@
         position: absolute;
         right: 0;
         bottom: -8px;
+        animation-name: mostrarImagen;
+        animation-duration: 1s;
+        animation-iteration-count: 1;
+        animation-delay: 0s;
+        animation-timing-function: ease-in-out;
+    }
+}
+@keyframes mostrarImagen {
+    0% {
+        opacity: 0;
+        transform: translateX(-15rem);
+    }
+    70%{
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0rem);
     }
 }
