Fix problem with delete item from carrito

--- a/styles/Carrito.module.css
+++ b/styles/Carrito.module.css
@@ -19,6 +19,7 @@
     align-items: center;
     border-bottom: 1px solid #cfcfcf;
     padding: 3rem;
+    position: relative;
 }
 
 .producto:last-of-type {
@@ -69,4 +70,16 @@
 
 .subtotal span {
     font-size: 2.4rem;
+}
+
+.eliminar {
+    all: unset;
+    position: absolute;
+    top: 3rem;
+    right: 1rem;
+    font-weight: bold;
+}
+
+.eliminar:hover {
+    cursor: pointer;
 }
